samples/_failures_safe/1761429110_0d6280_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_603d9116.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_603d9116.c:172:5: error: expected expression at end of input
  172 |     for (int i = 0; i < graph->vertices;
      |     ^~~
./samples/SAFE/__tmp_603d9116.c:172:5: error: expected declaration or statement at end of input
